# Flask-TodoApp

./: .dockerignore  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml  schema.py
backend/: Dockerfile  app.py  pyproject.toml
backend/gql/: index.py  schema.graphql
backend/models/: todo_tags.py  user.py
backend/resources/: graphql_route.py  todo.py  user.py
backend/tests/: test_scenarios.py
frontend/: dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: axios.js
frontend/src/pages/: Calendar.css  CreateTag.jsx  CreateTodo.jsx  EditTodo.jsx  Login.jsx  Register.jsx  TodoList.jsx
gql/: resolvers.py
graphql/: index.py  resolvers.py  schema.graphql
models/: __init__.py  tag.py  todo.py  todo_tags.py  user.py
resources/: graphql_route.py  tag.py  todo.py  user.py
tests/: conftest.py  test_scenarios.py
