[project]
name = "portfolilo-todoapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-marshmallow>=1.3.0",
    "flask-smorest>=0.46.2",
    "flask-sqlalchemy>=3.1.1",
    "marshmallow-sqlalchemy>=1.4.2",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
]
